<resources>
    <string name="app_name">TimeTable1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Timetable</string>
    <string name="menu_authors">Authors</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_to_do_list">To-do list</string>
    <string name="menu_subject_list">Subjects</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="subjectName">Subject Name</string>
    <string name="startTime">Start Time</string>
    <string name="finishTime">Finish Time</string>
    <string name="buttonAdd">Add</string>
    <string name="buttonBack">Back</string>
    <string name="roomNumber">Room number</string>
    <string name="dayText">Day of week</string>
    <string name="inRoom">in room</string>
    <string name="added">Added</string>
    <string name="incHour">Incorrect hour</string>
    <string name="addNote">Add note</string>
    <string name="delNote">Delete note</string>
    <string name="editNote">Edit note</string>
    <string name="test">Test</string>
    <string name="quiz">Quiz</string>
    <string name="homework">Homework</string>
    <string name="other">Other</string>
    <string name="oddWeek">Odd week</string>
    <string name="evenWeek">Even week</string>
    <string name="everyWeek">Every week</string>
    <string name="teacherName">Teacher Name</string>
    <string name="timetable">Timetable</string>
    <string name="textNote">Text notes</string>
    <string name="Find">Find note</string>
    <string name="topicEnter">Enter topic</string>
    <string name="noteEnter">Enter note</string>
    <string name="FindOnly">Find</string>
    <string name="addToDo">Add task</string>
    <string name="dontAddToDo">Don\'t add task</string>
    <string name="descriptionEnter">Enter description</string>
    <string name="border">Border</string>
    <string name="none">None</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="white">White</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="vibrationModeOption">Vibration mode during classes</string>
    <string name="deleteAllData">Delete all data</string>
    <string name="delete">Delete</string>
    <string name="backupExport">Make backup file</string>
    <string name="backupImport">Import file</string>
    <string name="dataDeleted">Data deleted</string>
    <string name="wrongFile">Wrong file</string>
    <string name="timatebleExport">Export Timetable</string>
    <string name="timetableImport">Import Timetable</string>
    <string name="exportToTextFile">Export notes to text file</string>
    <string name="nightMode">Night mode</string>
    <string name="vibrationMode">Vibration mode</string>
    <string name="normalMode">Normal mode</string>
    <string name="noClasses">No Classes</string>



</resources>