<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_subject_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_subject_list" />
        <item
            android:id="@+id/nav_to_do_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_to_do_list" />
        <item
            android:id="@+id/nav_authors"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_authors" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/settings" />
        <!-- <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" /> -->
    </group>
</menu>